Fix database connection to using configuration

--- a/SwiftOrder-Server/appsettings.json
+++ b/SwiftOrder-Server/appsettings.json
@@ -5,5 +5,6 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "WebAPIConnection": "Data Source=MyDatabase.sqlite"
 }
