Create DTOs and GetAllRestaurnt API

--- a/SwiftOrder-Server/appsettings.json
+++ b/SwiftOrder-Server/appsettings.json
@@ -6,5 +6,5 @@
     }
   },
   "AllowedHosts": "*",
-  "WebAPIConnection": "Data Source=MyDatabase.sqlite"
+  "WebAPIConnection": "Data Source=SwiftOrderDatabase.sqlite"
 }
